fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,6 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     gap: 1em;
     max-width:295px;
 }
